# MLOPs-homeworks

./: README.md  week1_homework.ipynb
project/mlops_project/: .gitignore  README.md  backend.db  main.ipynb  main.py  part_1_building_the_model.md  part_2_deployment_visualization.md  pyproject.toml  requirements.txt
project/mlops_project/docs/: EC2 server.md  readme_web_service.md
project/mlops_project/module_name/: data_preprocesing.py  feature_engineering.py  kaggle_client.py
project/mlops_project/modules/: AWS_S3.py  data_preprocesing.py  kaggle_client.py  mlflow_client.py  predict_docker_AWS.py
project/mlops_project/tests/: test_data_preprocesing.py
project/mlops_project/tests/intergration_tests/: test_cloud_storage_client.py  test_kaggle_client.py
project/mlops_project/web-service-mlflow/: Dockerfile  predict.py  test.py
project/mlops_project/web_service/: Dockerfile_web_service  predict.py  predict_web_service.py  readme.md  requirements.txt  requirements_web_service.txt
project/mlops_project/web_service/AutoGluon_mlflow_best_quality_deployment/: learner.pkl  metadata.json
project/mlops_project/web_service/AutoGluon_mlflow_best_quality_deployment/models/: trainer.pkl
project/mlops_project/web_service/AutoGluon_mlflow_best_quality_deployment/models/LightGBMXT_BAG_L1_FULL/: model.pkl
project/mlops_project/web_service/modules/: mlflow_client_test.py
project/mlops_project/web_service_mlflow/: Dockerfile  predict.py  requirements.txt
project/mlops_project/web_service_mlflow_visualiztion/: predict.py  visualization.md  visualiztion.py
(+67 files in other folders)
