[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "module_name"
version = "0.0.1"
description = "This project aims to provide a framework of using Autogluon to a given problem with further deployment on the cloud"
authors = [
  { name = "ag" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["module_name"]
force_sort_within_sections = true
